# serigen

./: .env  Cargo.toml  Dockerfile
.sqlx/: query-0584bca67e37f602ec64ee44f7dc6e5d67b69300c226e0e8683ec3b70049c5be.json  query-09cf3ca6f4ae51e91a5c16da54367dfb4180259655ed088daf0489931e46bb8f.json  query-0a625a10d05d85d11da79812b92bd3caf014fcff1650017f85d99e9f23545ee0.json  query-11a39d070f46a221d6a9fe761f9ee6b5a3d22c5587319ece00afbe13c0748f6c.json  query-1e3ab75dbcd82b883d5b17831893331d356039b64e49303e9b87ed11aab8a470.json  query-25cc6795e3fea4d63c45ee21946eab9675c08781a11b3eb9cffbefe9d2257fb5.json  query-43935e6d70cc505bc7cd9c452489a08184e5805c70e3eacfd1ee81c604bd392c.json  query-5d8925ed8d20965970d2ab37be373ca999b6a4734a376e83f0575d8ec3e68b13.json  query-74bd13b9cfe06835dde113f2d6db0a25c7a4d8ef238a5575d504c361e118a010.json  query-75edc1aaf0a53fef5c22f1dc9f8be120a5c658eec4babc7577b31a3237bff26e.json  query-7d8032f5c9435d5a06374540eedc05a1f8a520b3b69fa0a9f418e5b681916ead.json  query-8a51a294cda13f4f346a040d4f0bc99b4014b860381ddbfe10c5aef71a6e32fb.json  query-9ac5ba5b2228e8031cadaee3401ece2b6c1de8619e5ebe9c0a0c87ae692810b2.json  query-a103cad4b38c36735d4353629325847e620b28b9b9d64a0741593ce754f2b4f8.json  query-a8977077614d6a193195b6355077b8885692a3528fd65220e6247f7731b9bc01.json  query-b9e26ecab7c27fa89158847083c3d90a7f3a28dd5c1b6b61f00bd05531039406.json  query-c6388cd1f97129127b28f807e1cf365a887db935a1bf116504f6fba1e5d140e5.json  query-cdce9d5893862ffa2c9359e19eb0c2e6b040b6b52b456b6bf5a24f7288c705f7.json  query-d56abd238f18d1ab405a98698163ac45f7da90a93a39a3f038ff78366c3574da.json  query-d75d3e9a6745d8ab0f62ccde0228e05f37288c8ad11d6049b033cf8b55c20fc6.json  (+2 more)
src/: db.rs  (+12 more)
(+47 files in other folders)
